--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Logs
+*.idea
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+serv_test/node_modules
+serv_test/node_modules/
 # Runtime data
 pids
 *.pid
